kube-oidc-proxy.yaml
# Kubernetes LDAP integration
# https://example.atlassian.net/browse/DOPS-3531
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-kube-oidc-proxy
  namespace: kube-system
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/0
    ## GCE Health Checks
    - ipBlock:
        cidr: 130.211.0.0/22
    - ipBlock:
        cidr: 35.191.0.0/16
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 8080
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-oidc-proxy
  policyTypes:
  - Ingress
